--- a/Plan/build.gradle
+++ b/Plan/build.gradle
@@ -105,10 +105,13 @@ subprojects {
         implementation "com.google.dagger:dagger:$daggerVersion"
         annotationProcessor "com.google.dagger:dagger-compiler:$daggerCompilerVersion"
         testAnnotationProcessor "com.google.dagger:dagger-compiler:$daggerCompilerVersion"
+        
+        // Http client for making web requessts
+        implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
         // Test Tooling Dependencies
         testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'      // JUnit 5
-        testImplementation "org.mockito:mockito-core:4.2.0"                // Mockito Core
+        testImplementation "org.mockito:mockito-core:4.1.0"                // Mockito Core
         testImplementation "org.mockito:mockito-junit-jupiter:4.2.0"       // Mockito JUnit 5 Extension
         testImplementation "org.seleniumhq.selenium:selenium-java:4.1.0" // Selenium (Browser tests)
         testImplementation "com.jayway.awaitility:awaitility:1.7.0"         // Awaitility (Concurrent wait conditions)
